--- a/nginx-demo/Dockerfile
+++ b/nginx-demo/Dockerfile
@@ -1,6 +1,6 @@
-//nginx image from dockerhub.com
+#nginx image from dockerhub.com
 FROM nginx:1.17.3
 
-//copies pizza html and images to container
+#copies pizza html and images to container
 COPY index.html /usr/share/nginx/html/
 COPY ./w3images /usr/share/nginx/html/w3images
